# raygametest

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt
cmake/: compile_options.cmake  install_helpers.cmake
game/: CMakeLists.txt
game/assetsrc/sprites/: raccoon.pxo  raccoon_pixels.kra  raccoon_runcycle.pxo  raccoon_sketches.kra  raccoon_stand.pxo  runcycle.kra
game/res/sprites/raccoon/: raccoon.json
game/res/sprites/runcycle/: runcycle.json
game/res/terrain/sample/: sample.json
game/src/: Main.c  gametypes.h  gameutil.c  gameutil.h  main.c  platformerlevel.c  platformerlevel.h  platformmovement.c  platformmovement.h  player.c  player.h
gamelib/: CMakeLists.txt
gamelib/include/gamelib/: collisionclasses.h  debugging.h  debugrendercustom.h  drawingdepth.h  drawinglayers.h  gametypes.h  gameutil.h  memoryallocator.h  oldplayer.h  oldworld.h  parametric.h  physics.h  platformerlevel.h  platformmovement.h  player.h  stringutil.h  terrain.h  trace.h  world.h
gamelib/include/gamelib/debugging/: leakcheck_includefirst.h
gamelib/include/gamelib/descriptor/: spritedescriptor.h
gamelib/include/gamelib/entity/: cameracomponent.h  componenttypes.h  entity.h  logiccomponent.h  physicscomponent.h  spritecomponent.h  terraincomponent.h
gamelib/include/gamelib/logic/: playerlogic.h  playermovementlogic.h
gamelib/include/gamelib/oldentity/: oldcomponenttypes.h  oldentity.h  oldphysicscomponent.h
gamelib/src/: collisionclasses.c  debugging.c  drawingdepth.c  drawinglayers.c  gameutil.c  imagepool.c  imagepool.h  listmacros.h  memoryallocator.c  oldplayer.c  parametric.c  physics.c  platformerlevel.c  platformmovement.c  player.c  presetmeshes.c  presetmeshes.h  presetnames.h  resourcepool.c  resourcepool.h  stringutil.c  terrain.c  texturepool.c  texturepool.h  threading.c  threading.h  trace.c  world.c  world_impl.h  worldimpl.h
gamelib/src/asyncload/: asyncload.c  asyncload.h
gamelib/src/descriptor/: descriptorutil.c  descriptorutil.h  entitygroupdescriptor.c  entitygroupdescriptor.h  spritedescriptor.c  spritesheetdescriptor.c  spritesheetdescriptor.h  terraindescriptor.c  terraindescriptor.h
gamelib/src/entity/: cameracomponentimpl.c  cameracomponentimpl.h  componenttypes.h  entity.c  entitygroup.c  entitygroup.h  entityimpl.c  entityimpl.h  logiccomponentimpl.c  logiccomponentimpl.h  physicscomponent.c  physicscomponentimpl.c  physicscomponentimpl.h  spritecomponentimpl.c  spritecomponentimpl.h  terraincomponent.c  terraincomponentimpl.c  terraincomponentimpl.h
gamelib/src/logic/: playerlogic.c  playermovementlogic.c
gamelib/src/oldentity/: oldentity.c  oldphysicscomponent.c
gamelib/src/presets/: presetmeshes.c  presetmeshes.h  presetnames.h  presetshaders.c  presetshaders.h  presettextures.c  presettextures.h
gamelib/src/rendering/: builtinshaders.c  builtinshaders.h  debugrendercustom_impl.c  debugrendercustom_impl.h  debugrendering.c  debugrendering.h  renderutils.c  renderutils.h  spriterenderer.c  spriterenderer.h  terrainrenderer.c  terrainrenderer.h
gamelib/src/resourcepool/: resourcepool.c  resourcepool.h  resourcepool_internal.c  resourcepool_internal.h  resourcepool_mesh.c  resourcepool_shader.c  resourcepool_spritesheet.c  resourcepool_terrain.c  resourcepool_texture.c  resourcepoolnew.h  resourcepoolnew_internal.c  resourcepoolnew_mesh.c  resourcepoolnew_spritesheet.c  resourcepoolnew_texture.c
playground/: CMakeLists.txt
playground/levelcollision/: CMakeLists.txt
playground/levelcollision/src/: main.c
playground/levelcollision_2/: CMakeLists.txt
playground/levelcollision_2/src/: main.c
playground/movement_control/: CMakeLists.txt
playground/movement_control/res/sprites/raccoon/: raccoon.json
playground/movement_control/res/terrain/: test.json
playground/movement_control/src/: main.c
playground/parametric_demo/: CMakeLists.txt
playground/parametric_demo/src/: main.c
playground/tutorial/: CMakeLists.txt
playground/tutorial/res/sprites/raccoon/: raccoon.json
playground/tutorial/res/terrain/sample/: sample.json
playground/tutorial/src/: main.c
raylib/: CMakeLists.txt
raylib/rayguilib/: CMakeLists.txt
